clover/llvm: Allow translating from SPIR-V to LLVM IR

--- a/src/gallium/state_trackers/clover/Makefile.am
+++ b/src/gallium/state_trackers/clover/Makefile.am
@@ -39,9 +39,13 @@ libclllvm_la_CXXFLAGS = \
 	$(LIBELF_CFLAGS) \
 	-DLIBCLC_INCLUDEDIR=\"$(LIBCLC_INCLUDEDIR)/\" \
 	-DLIBCLC_LIBEXECDIR=\"$(LIBCLC_LIBEXECDIR)/\" \
-	-DCLANG_RESOURCE_DIR=\"$(CLANG_RESOURCE_DIR)\"
+	-DCLANG_RESOURCE_DIR=\"$(CLANG_RESOURCE_DIR)\" \
+	$(LLVM_SPIRV_CFLAGS)
 
 libclllvm_la_SOURCES = $(LLVM_SOURCES)
+
+libclllvm_la_LDFLAGS = \
+	$(LLVM_SPIRV_LIBS)
 
 libclover_la_CXXFLAGS = \
 	$(CXX11_CXXFLAGS) \
